--- a/src/components/Dialog.astro
+++ b/src/components/Dialog.astro
@@ -1,6 +1,6 @@
 <dialog>
   <form>
-    <h3>Contact me</h3>
+    <h3>Contact me 👋</h3>
     <div>
       <label>Email</label>
       <input autofocus required type='email' />
@@ -51,6 +51,7 @@
     border-radius: 0.2rem;
     border: 1px solid gray;
     padding: 0.2rem;
+    max-width: 100%;
   }
 
   label {
