--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,8 @@ import '@fontsource/poppins/700.css'
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
+    <meta name='description' content='Ehsan Portafolio Design.' />
+    <meta name='theme-color' content='#FE481C' />
     <link rel='icon' type='image/x-icon' href='/favicon.ico' />
     <title>Richard Brian</title>
   </head>
