--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon'
 import Button from './Button'
 ---
 
-<section class='centered'>
+<section>
   <div class='greeting'>
     <h2>
       Hi! I Am
@@ -19,7 +19,7 @@ import Button from './Button'
 
   <div class='links'>
     <Button client:visible>Hire Me</Button>
-    <a href='/'>
+    <a href='#'>
       <strong>Projects</strong>
       <Icon name='akar-icons:arrow-up-right' width={16} />
     </a>
