--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,11 @@ import '@fontsource/poppins/700.css'
         max-width: 1440px;
       }
 
+      header,
+      section {
+        padding-inline: 1.5rem;
+      }
+
       button {
         border-width: 1px;
         padding: 0.5rem 1.5rem;
@@ -55,8 +60,13 @@ import '@fontsource/poppins/700.css'
         text-decoration: none;
       }
 
-      .centered {
-        padding-inline: 1.5rem;
+      ::-webkit-scrollbar {
+        background-color: transparent;
+        width: 10px;
+      }
+      ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
       }
     </style>
   </body>
