--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from './Icon.astro'
+import Isotype from './Isotype.astro'
 ---
 
 <section class='centered'>
@@ -11,9 +11,9 @@ import Icon from './Icon.astro'
     </p>
     <img src='img/PersonalPhoto.webp' alt='Person' width='449' height='555' loading='lazy' />
 
-    <Icon name='figma' />
-    <Icon name='sketch' />
-    <Icon name='adobe_xd' />
+    <Isotype name='figma' />
+    <Isotype name='sketch' />
+    <Isotype name='adobe_xd' />
   </div>
 </section>
 
