--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -1,7 +1,7 @@
 <section>
   <div>
     <h3>Project <br /> Statistics 2022</h3>
-    <button>Know More</button>
+    <button class='btn'>Know More</button>
   </div>
 
   <div class='items'>
