--- a/src/components/Isotype.astro
+++ b/src/components/Isotype.astro
@@ -1,17 +1,19 @@
 ---
+import { Icon } from 'astro-icon'
+
 export interface Props {
-  name: 'figma' | 'sketch' | 'adobe_xd'
+  name: string
 }
-const { name } = Astro.props as Props
+
+const { name } = Astro.props
 ---
 
 <picture>
-  <img src={`svg/${name}.svg`} width='32' height='32' loading='lazy' alt={`${name} icon`} />
+  <Icon name={name} width='32' height='32' />
 </picture>
 
 <style lang='scss'>
   picture {
-    position: absolute;
     width: 4rem;
     aspect-ratio: 1;
     border-radius: 50%;
@@ -19,6 +21,7 @@ const { name } = Astro.props as Props
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
 
     &:first-of-type {
       top: 200px;
