--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,16 +47,20 @@ import '@fontsource/poppins/700.css'
       }
 
       button {
-        border-width: 1px;
-        padding: 0.5rem 1.5rem;
-        cursor: pointer;
-        border-radius: 0.2rem;
+        border: none;
         font: inherit;
-        font-weight: bold;
+        cursor: pointer;
+        background-color: transparent;
+
+        &.btn {
+          padding: 0.5rem 1.5rem;
+          border-radius: 0.2rem;
+          font-weight: bold;
+        }
       }
 
       a {
-        color: black;
+        color: inherit;
         text-decoration: none;
       }
 
@@ -67,6 +71,10 @@ import '@fontsource/poppins/700.css'
       ::-webkit-scrollbar-thumb {
         background-color: rgba(0, 0, 0, 0.2);
         border-radius: 10px;
+      }
+
+      ::selection {
+        background: rgba(231, 104, 0, 0.2);
       }
     </style>
   </body>
