--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Header from '../components/Header.astro'
 import Main from '../components/Main.astro'
 import Dialog from '../components/Dialog.astro'
+import Header from 'components/Header.astro'
 ---
 
 <Layout>
