--- a/src/components/Isotype.astro
+++ b/src/components/Isotype.astro
@@ -9,7 +9,7 @@ const { name } = Astro.props
 ---
 
 <picture>
-  <Icon name={name} width='32' height='32' />
+  <Icon name={name} size={32} />
 </picture>
 
 <style lang='scss'>
