--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -19,7 +19,7 @@
     &:focus-within {
       .wrapper {
         opacity: 1;
-        transform: translateY(-15px);
+        transform: translateY(0px);
         pointer-events: initial;
       }
 
@@ -47,9 +47,10 @@
 
   .wrapper {
     position: absolute;
-    padding-top: 25px;
+    padding-top: 1rem;
     opacity: 0;
     pointer-events: none;
+    transform: translateY(15px);
     transition: transform 0.2s, opacity 0.2s;
   }
 
