--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -2,7 +2,7 @@
 import Isotype from './Isotype.astro'
 ---
 
-<section class='centered'>
+<section>
   <div>
     <p>
       Create Your site in <strong>Figma</strong>
