--- a/src/components/DropdowMobile.astro
+++ b/src/components/DropdowMobile.astro
@@ -2,11 +2,11 @@
   <button class='nav-item'>Works</button>
   <div class='wrapper'>
     <ul>
-      <li><a href='https://github.com' target='_blank'>Work 1</a></li>
-      <li><a href='https://github.com'>Work 2</a></li>
-      <li><a href='https://github.com'>Work 3</a></li>
-      <li><a href='https://github.com'>Work 4</a></li>
-      <li><a href='https://github.com'>Work 5</a></li>
+      <li><a href='#'>Work 1</a></li>
+      <li>Work 2</li>
+      <li>Work 3</li>
+      <li>Work 4</li>
+      <li>Work 5</li>
     </ul>
   </div>
 </article>
@@ -14,7 +14,6 @@
 <style lang='scss'>
   article {
     position: relative;
-    z-index: 9;
 
     &:hover,
     &:focus-within {
@@ -26,10 +25,10 @@
 
       button {
         color: var(--primary);
-      }
 
-      button::after {
-        transform: rotate(-135deg);
+        ::after {
+          transform: rotate(-135deg);
+        }
       }
     }
   }
@@ -67,29 +66,20 @@
     width: 8rem;
     padding: 0;
     color: gray;
-    overflow: hidden;
   }
 
   li {
+    padding: 0.7rem;
+    cursor: pointer;
+    transition: background-color 0.2s, color 0.2s;
+
     &:not(:last-child) {
       border-bottom: 1px solid #f0f0f0;
     }
-  }
 
-  a {
-    padding: 0.7rem;
-    display: block;
-
-    transition: background-color 0.2s, color 0.2s;
-
-    &:hover,
-    &:focus-within {
+    &:hover {
       color: var(--primary);
       background-color: #fafafa;
     }
   }
-
-  // a:focus {
-  //   color: blue;
-  // }
 </style>
