--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -43,6 +43,8 @@ import Button from './Button'
 </section>
 
 <style lang='scss'>
+  @use '../scss/mixins' as *;
+
   section {
     padding-top: 6rem;
 
@@ -65,10 +67,8 @@ import Button from './Button'
     display: inline-block;
   }
 
-  section :global(button) {
-    background-color: var(--primary);
-    border-color: var(--primary);
-    color: white;
+  section :global(.btn) {
+    @include btnHover(var(--primary), white);
   }
 
   span {
