--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,11 @@ import '@fontsource/poppins/700.css'
 
       body {
         font-family: 'Poppins', sans-serif;
+        max-width: calc(100vw - 10px);
+
+        @media (min-width: 1024px) {
+          max-width: none;
+        }
       }
 
       header,
@@ -42,7 +47,8 @@ import '@fontsource/poppins/700.css'
       }
 
       header,
-      section {
+      section,
+      .with-padding {
         padding-inline: 1.5rem;
       }
 
@@ -51,17 +57,27 @@ import '@fontsource/poppins/700.css'
         font: inherit;
         cursor: pointer;
         background-color: transparent;
+        padding: 0;
+        color: inherit;
 
         &.btn {
           padding: 0.5rem 1.5rem;
           border-radius: 0.2rem;
           font-weight: bold;
+          border-width: 1px;
+          border-style: solid;
+          // border-color: black;
         }
       }
 
       a {
         color: inherit;
         text-decoration: none;
+      }
+
+      a,
+      button {
+        -webkit-tap-highlight-color: transparent;
       }
 
       ::-webkit-scrollbar {
