--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,12 +27,13 @@ import '@fontsource/poppins/700.css'
       }
 
       h1,
-      h2 {
+      h2,
+      h3 {
         font-weight: 700;
       }
 
       body {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'Poppins', system-ui;
         max-width: calc(100vw - 10px);
 
         @media (min-width: 1024px) {
@@ -66,17 +67,16 @@ import '@fontsource/poppins/700.css'
           font-weight: bold;
           border-width: 1px;
           border-style: solid;
-          // border-color: black;
         }
       }
 
       a {
-        color: inherit;
         text-decoration: none;
       }
 
       a,
       button {
+        color: inherit;
         -webkit-tap-highlight-color: transparent;
       }
 
