--- a/src/components/Isotype.astro
+++ b/src/components/Isotype.astro
@@ -24,18 +24,20 @@ const { name } = Astro.props
     position: absolute;
 
     &:first-of-type {
-      top: 200px;
-      left: 50px;
+      top: 250px;
+      left: 0px;
     }
 
     &:nth-of-type(2) {
       top: 150px;
-      right: 50px;
+      // right: 15px;
+      right: 0px;
     }
 
     &:nth-of-type(3) {
-      bottom: 150px;
-      right: 50px;
+      bottom: 250px;
+      // right: 15px;
+      right: 0px;
     }
   }
 </style>
