--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -2,7 +2,7 @@
 import Icon from 'astro-icon'
 ---
 
-<button id='mobile-menu'><Icon name='mdi:menu' size={32} /></button>
+<button id='mobile-menu' aria-label='mobile menu'><Icon name='mdi:menu' size={32} /></button>
 <nav id='mobile-nav'>
   <a class='with-padding wrapper2 item' href='#'>Home</a>
   <div class='wrapper2'>
