Needs changes in accessibility

--- a/src/components/Dialog.astro
+++ b/src/components/Dialog.astro
@@ -1,13 +1,14 @@
 <dialog class='with-padding'>
-  <form>
+  <form id='contact-form'>
     <h3>Contact me 👋</h3>
     <div>
-      <input type='email' name='email' disabled placeholder=' ' required id='i-email' />
-      <label for='i-email'>Email</label>
+      <input type='email' name='email' disabled placeholder=' ' required id='contact-email' />
+      <label for='contact-email'>Email</label>
     </div>
     <div>
-      <textarea cols='30' rows='4' disabled placeholder=' ' required id='ta-message'></textarea>
-      <label for='ta-message'>Message</label>
+      <textarea cols='30' rows='4' disabled placeholder=' ' required id='contact-message'
+      ></textarea>
+      <label for='contact-message'>Message</label>
     </div>
 
     <button class='btn' disabled>Send</button>
