--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -15,7 +15,8 @@ import Stats from './Stats.astro'
     display: grid;
 
     @media (min-width: 1024px) {
-      grid-template: auto auto / repeat(2, 1fr);
+      // grid-template: auto auto / repeat(2, 1fr);
+      grid-template: auto auto / 55% 45%;
       grid-template-areas:
         'presentation picture'
         'stats picture';
