--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,10 @@ import '@fontsource/poppins/700.css'
   <body>
     <slot />
     <style is:global lang='scss'>
+      html {
+        scroll-behavior: smooth;
+      }
+
       :root {
         --primary: #fe481c;
       }
