--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -14,6 +14,11 @@ import Isotype from './Isotype.astro'
     <Isotype name='figma' />
     <Isotype name='sketch' />
     <Isotype name='adobe_xd' />
+
+    <form id='news-form'>
+      <input id='i-news_email' type='email' placeholder='Suscribe my Newsletter' name='email' />
+      <button>🡢</button>
+    </form>
   </div>
 </section>
 
@@ -41,10 +46,58 @@ import Isotype from './Isotype.astro'
     margin-inline: auto;
     width: fit-content;
     position: relative;
+
+    @media (min-width: 1024px) {
+      margin-inline: auto 0;
+    }
   }
 
   img {
     max-width: 100%;
     height: auto;
+  }
+
+  form {
+    display: flex;
+    border-radius: 0.5rem;
+    position: absolute;
+    bottom: 2.5rem;
+    overflow: hidden;
+    max-width: 100%;
+
+    &:focus-within {
+      outline: 1px solid gray;
+      box-shadow: 0px 0px 12px 0px gray;
+    }
+  }
+
+  input {
+    max-width: 100%;
+    width: 350px;
+    border: none;
+    font-family: inherit;
+    padding-block: 1rem;
+    padding-inline: 0.5rem 3.5rem;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  button {
+    background-color: black;
+    color: white;
+    width: 2.5rem;
+    aspect-ratio: 1;
+    border-radius: 0.2rem;
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: transform 0.2s ease-in-out;
+
+    &:active {
+      transform: translateY(-50%) scale(0.9);
+    }
   }
 </style>
