--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -29,3 +29,14 @@
     transform: scale(0.9);
   }
 }
+
+@mixin visibility($visibility) {
+  visibility: $visibility;
+
+  @if ($visibility == visible) {
+    opacity: 1;
+  } @else {
+    opacity: 0;
+    transition: visibility 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  }
+}
